@@ -58,6 +58,7 @@ Version 1.5.0-svn:
    * it's now possible to specify with loop= how many times a sample
      associated with a sound source should be played
    * new [switch] conditional command
+   * new [fire_event] event tag to fire any custom event
    * new [unit_side] theme element : this is the side of the current unit (flag)
  * miscellaneous and bug fixes:
    * Removed spurious -R linker switch from command line generated by the Boost
